<resources>
    <string name="app_name">StudentHelper</string>
    <string name="delete_student_button">Delete</string>
    <string name="course_name">Course Name</string>
    <string name="teachers">Teachers</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="note">Note</string>
    <string name="mark">Mark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>